@@ -8,7 +8,8 @@ import circus
 import tempfile
 import h5py
 import numpy
-from circus.shared.messages import print_and_log, get_colored_header
+import logging
+from circus.shared.messages import print_and_log, get_colored_header, init_logging
 from circus.shared.algorithms import slice_result
 from circus.shared.parser import CircusParser
 
@@ -39,13 +40,16 @@ def main(argv=None):
     logger         = logging.getLogger(__name__)
     file_out_suff  = params.get('data', 'file_out_suff')
 
-    if not params.get('data', 'multi-files'):
-        print_and_log(['Not a multi-file!'], 'error', logger)
+    if params.get('data', 'stream_mode') in ['None', 'none']:
+        print_and_log(['No streams in the datafile!'], 'error', logger)
         sys.exit(1)
 
-    to_process  = circus.shared.files.get_multi_files(params)
+    data_file   = params.get_data_file()
     result      = circus.shared.files.get_results(params, extension=extension)
-    times       = circus.shared.files.data_stats(params, show=False, export_times=True)
+    times       = []
+    for source in data_file._sources:
+        times += [[source.t_start, source.t_stop]]
+
     sub_results = slice_result(result, times)
 
     for count, result in enumerate(sub_results):
